--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: GCP FunctionApp Deploy
 on:
   push:
     branches:
-      - master  # Change this to the branch you want to trigger the workflow on
+      - main  # Change this to the branch you want to trigger the workflow on
 
 jobs:
   build:
