--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,8 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_PASSWORD }}
           
-      - name: Cloud Functions Deploy
-        uses: google-github-actions/deploy-cloud-functions@v0.1.2
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-cloud-functions@v1'
         with:
-          name: myfuncapp
-          description: Test python cloud function # nullable
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          region: us-central1
-          source_dir: src
-          # name of our function in our main.py file, defaults to the resource name suffix 
-          entry_point: hello_world
-          # runtime to use for the function
-          runtime: python39
-          # the function execution timeout
-          timeout: 60
-          # the maximum number of instances for the function.
-          max_instances: 1
+          name: 'myfuncapp'
+          runtime: 'python39'
