--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
       - id: 'deploy'
         uses: 'google-github-actions/deploy-cloud-functions@v1'
         with:
-          name: 'myfuncapp'
+          name: 'myfuncapp01'
           runtime: 'python39'
