--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Cloud Functions Deploy
         uses: google-github-actions/deploy-cloud-functions@v0.1.2
         with:
-          name: myfuncapptest
+          name: myfuncapptest23733
           description: Test python cloud function # nullable
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           region: us-central1
           source_dir: src
           # name of our function in our main.py file, defaults to the resource name suffix 
-          entry_point: hello_http
+          entry_point: hello_world
           # runtime to use for the function
           runtime: python39
           # the function execution timeout
