--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,15 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_PASSWORD }}
           
       - name: Cloud Functions Deploy
-        uses: google-github-actions/deploy-cloud-functions@v0.1.2
+        uses: google-github-actions/deploy-cloud-functions@v1
         with:
-          name: myfuncapptest23733
+          name: myfuncapptestscw2df3
           description: Test python cloud function # nullable
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           region: us-central1
           source_dir: src
           # name of our function in our main.py file, defaults to the resource name suffix 
-          entry_point: hello_world
+          entry_point: hello_http
           # runtime to use for the function
           runtime: python39
           # the function execution timeout
