--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -23,5 +23,5 @@ jobs:
       - id: 'upload-file'
         uses: 'google-github-actions/upload-cloud-storage@v1'
         with:
-          path: '/DB/DeltaScript/sampledb.sql'
+          path: './DB/DeltaScript/sampledb.sql'
           destination: 'bucket0sgqd1/sampledb.sql'
