--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -20,40 +20,25 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_DB_PASSWORD }}
           
-name: Deploy SQL to GCP PostgreSQL
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9  # Change this to the desired Python version
 
-on:
-  push:
-    branches:
-      - main  # Change this to the branch you want to trigger the workflow on
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install psycopg2
 
-jobs:
-  deploy_sql:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9  # Change this to the desired Python version
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install psycopg2
-
-    - name: Run SQL deployment script
-      run: |
-        python path/to/your/deploy_script.py
-      env:
-        PROJECT_ID: ${{ secrets.PROJECT_ID }}
-        POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
-        POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
-        POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
-        POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        SQL_FILE_PATH: path/to/your/sql_file.sql
+      - name: Run SQL deployment script
+        run: |
+          python ./DB/deploy_script.py
+        env:
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+          POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          SQL_FILE_PATH: ./DB/DeltaScript/sampledb.sql
 
