--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -32,13 +32,8 @@ jobs:
 
       - name: Run SQL deployment script
         run: |
-          python ./DB/deploy_script.py
+          python ./DB/DeltaScript/conn_python.py
         env:
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
-          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
-          POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          SQL_FILE_PATH: ./DB/DeltaScript/sampledb.sql
-
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASS: ${{ secrets.DB_PASS }}
+          DB_NAME: ${{ secrets.DB_NAME }}
