--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -3,7 +3,7 @@ name: GCP Postgres Deploy - Python
 on:
   push:
     branches:
-      - main  # Change this to the branch you want to trigger the workflow on
+      - main  # Change this to the branch you want to trigger the workflow
 
 jobs:
   build:
