--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -29,12 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install psycopg2
-          pip install google-cloud-sql-connector
 
       - name: Run SQL deployment script
         run: |
-          python ./DB/DeltaScript/conn_python.py
-        env:
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASS: ${{ secrets.DB_PASS }}
-          DB_NAME: ${{ secrets.DB_NAME }}
+          python ./DB/pythn_conn.py
