--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install psycopg2
-          pip install google-cloud
+          pip install google-cloud-storage
 
       - name: Run SQL deployment script
         run: |
