--- a/.github/workflows/post_python.yml
+++ b/.github/workflows/post_python.yml
@@ -30,6 +30,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install psycopg2
           pip install google-cloud-storage
+          pip install pandas
+          pip install numpy
+          pip install mysql-connector-python
 
       - name: Run SQL deployment script
         run: |
